--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
   <body>
     <!-- Navbar -->
     <!-- As a link -->
-    <nav class="navbar bg-body-tertiary fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand logo" href="#"><img src="img/Logo.webp" alt="RJ25D" /></a>
+    <nav class="navbar navbar-expand-lg landing sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="img/Logo.webp" alt="Logo" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <!-- End -->
@@ -21,41 +36,24 @@
     <!-- Content -->
     <div class="container content">
       <div class="row">
-        <div class="col-sm">
-          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/Gambar (1).jpg" class="d-block w-100" alt="..." />
-              </div>
-              <div class="carousel-item">
-                <img src="img/Gambar (2).jpg" class="d-block w-100" alt="..." />
-              </div>
-              <div class="carousel-item">
-                <img src="img/Gambar (3).jpg" class="d-block w-100" alt="..." />
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        <div class="col-md">
+          <img src="img/FIX YOU.jpg" class="img" alt="Poster MV Fix You" />
         </div>
         <div class="col-sm sinopsis">
           <h1 class="display-1">SINOPSIS</h1>
           <p class="text-justify">
-            lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Tara, seorang mahasiswi pendiam, menjalani hari-harinya dengan rasa lelah dan hampa. Kamar yang sunyi dan catatan-catatan di mejanya menjadi saksi dari pikirannya yang terus bergulat dengan ketakutan untuk memulai sesuatu yang
+            baru. Setiap pagi terasa berat, dan senyum yang ia tampilkan hanyalah topeng dari kesedihan yang ia sembunyikan.
           </p>
           <p class="text-justify">
-            lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Dalam perjalanan menaiki kereta, Tara larut dalam pikirannya sendiri. Pantulan wajah di kaca jendela menyingkap kenangan lama. Saat ia duduk sendirian di kelas, makan tanpa teman di kantin, dan pura-pura sibuk agar tidak
+            terlihat kesepian.
           </p>
-          <a href="#" class="tombol mt-3">Tonton Disini</a>
-          <a href="#" class="tombol icon mt-3"><i class="fa-brands fa-instagram"></i> Follow Us</a>
+          <p class="text-justify">
+            Namun, sesuatu berubah ketika seorang teman menepuk pundaknya dan menyapanya dengan hangat. Di momen sederhana itu, Tara mulai merasakan kembali arti kebersamaan dan harapan. Dunia yang tadinya terasa dingin perlahan menjadi
+            hangat. Film ini berakhir dengan senyum tulus dari Tara tanda bahwa kadang, penyembuhan dimulai dari hal kecil seperti satu sapaan.
+          </p>
+          <a target="_blank" href="https://youtu.be/uPDDSOwMwRE" class="tombol mt-3">Tonton Disini</a>
         </div>
       </div>
     </div>
@@ -65,7 +63,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <p>© 2024 RJ25D. All rights reserved.</p>
+            <p>© 2025 <a href="https://www.instagram.com/class_dzz/" target="_blank" rel="noopener noreferrer">RJ25D</a>. All rights reserved.</p>
           </div>
         </div>
       </div>
