--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md">
+        <div class="col-sm">
           <p>
             Kelas RJ25D adalah tempat berkumpulnya 31 mahasiswa dan mahasiswi dari Program Studi Teknologi Rekayasa Multimedia di Politeknik Negeri Media Kreatif Jakarta. Kami berasal dari berbagai daerah dengan latar belakang yang
             berbeda—ada yang datang dari Jakarta, Tangerang, Bekasi, bahkan sampai luar Pulau Jawa seperti Padang dan Medan. Perbedaan ini membuat suasana kelas terasa berwarna, penuh cerita dan dialek yang beragam.
