--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="container about">
       <div class="row">
         <div class="col-md">
-          <h1 class="text-center">ABOUT</h1>
+          <h1 class="text-center display-1">ABOUT</h1>
         </div>
       </div>
       <div class="row">
